deployment/prod.yaml
apiVersion: apps/v1
kind: Deployment
  metadata:
    name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
      version: prod
  template:
    metadata:
      labels:
        app: flaskapp
        version: prod
    spec:
      containers:
      - name: flaskapp
        image: docker.io/azimuth3d/flaskapp:prod:${TAG}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
spec:
  ports:
  - port: 8080
    type: http
  selector:
    app: flaskapp
